// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup matches snapshot when toolbar props is not passed 1`] = `
<div
  className="sc-aXZVg fwTWFD"
/>
`;

exports[`ButtonGroup matches snapshot when toolbar props is passed 1`] = `
<div
  className="sc-aXZVg hoPRZL"
/>
`;
